added fonts for future use

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -1,3 +1,117 @@
+/* eczar-400 - latin */
+@font-face {
+    font-family: 'Eczar';
+    font-style: normal;
+    font-weight: 400;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/eczar-v8-latin-regular.woff2') format('woff2'); /* Chrome 26+, Opera 23+, Firefox 39+ */
+}
+
+@font-face {
+    font-family: 'Eczar';
+    font-style: normal;
+    font-weight: 400;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/eczar-v8-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* eczar-800 - latin */
+@font-face {
+    font-family: 'Eczar';
+    font-style: normal;
+    font-weight: 800;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/eczar-v8-latin-800.woff2') format('woff2'); /* Chrome 26+, Opera 23+, Firefox 39+ */
+}
+
+@font-face {
+    font-family: 'Eczar';
+    font-style: normal;
+    font-weight: 800;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/eczar-v8-latin-800.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* crimson-text-italic - latin */
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: normal;
+    font-weight: 400;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-regular.woff2') format('woff2'); /* Super Modern Browsers */
+}
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: normal;
+    font-weight: 400;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-regular.woff') format('woff'); /* Modern Browsers */
+}
+
+/* crimson-text-italic - latin */
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: italic;
+    font-weight: 400;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-italic.woff2') format('woff2'); /* Super Modern Browsers */
+}
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: italic;
+    font-weight: 400;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-italic.woff') format('woff'); /* Modern Browsers */
+}
+
+/* crimson-text-600 - latin */
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: normal;
+    font-weight: 600;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-600.woff2') format('woff2'); /* Super Modern Browsers */
+}
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: normal;
+    font-weight: 600;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-600.woff') format('woff'); /* Modern Browsers */
+}
+
+/* crimson-text-600italic - latin */
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: italic;
+    font-weight: 600;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-600italic.woff2') format('woff2'), /* Super Modern Browsers */
+}
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: italic;
+    font-weight: 600;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-600italic.woff') format('woff'), /* Modern Browsers */
+}
+
+/* crimson-text-700 - latin */
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: normal;
+    font-weight: 700;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-700.woff2') format('woff2'); /* Super Modern Browsers */
+}
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: normal;
+    font-weight: 700;
+    src:  url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-700.woff') format('woff'); /* Modern Browsers */
+}
+
+/* crimson-text-700italic - latin */
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: italic;
+    font-weight: 700;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
+}
+@font-face {
+    font-family: 'Crimson Text';
+    font-style: italic;
+    font-weight: 700;
+    src: url('https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironsworn-design-revamp/Ironsworn/assets/fonts/crimson-text-v10-latin-700italic.woff') format('woff'), /* Modern Browsers */
+}
+
 .charsheet {
     width: 842px !important;
     margin: 0 auto !important;
@@ -15,11 +129,11 @@ select::-ms-expand {
 }
 
 p {
-    font-family: Verdana, arial, sans-serif;
+    font-family: 'Crimson Text', arial, sans-serif;
 }
 
 h1 {
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     width: 100%;
     font-size: 28px;
@@ -30,7 +144,7 @@ h1 {
 }
 
 h2 {
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     width: 100%;
     font-size: 18px;
@@ -41,7 +155,7 @@ h2 {
 }
 
 h3 {
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     width: 100%;
     line-height: 24px;
@@ -89,7 +203,7 @@ h3.sheet-site-divide-notes::after, h3.sheet-site-divide-notes::before {
 }
 
 h4 {
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     width: 100%;
     font-size: 16px;
@@ -104,7 +218,7 @@ h4.sheet-tab-title {
 }
 
 h5 {
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     font-size: 12px;
     text-align: left;
@@ -379,7 +493,7 @@ span.sheet-momentum-burn {
     text-align: center;
     border: 1px solid #ccc;
     padding: 0.2em 1.3em 0.2em 1.3em;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
     margin-left: -79px;
@@ -481,13 +595,13 @@ span.sheet-momentum-burn {
 
 .sheet-pc-name {
     width: 100%;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
 }
 .sheet-debil-desc {
     width: 100%;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
 }
@@ -496,7 +610,7 @@ span.sheet-momentum-burn {
 .sheet-page-label, 
 .sheet-vow-clear-label {
     width: 100%;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
 }
@@ -590,7 +704,7 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 }
 
 .sheet-momentum-input {
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     width: 40px;
     font-size: 13px;
@@ -603,7 +717,7 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 }
 
 .sheet-stats-input {
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     width: 60px;
     line-height: 40px;
@@ -679,7 +793,7 @@ span.sheet-showhide {
     margin-right: 11px;
     border-radius: 4px;
     padding: 2px 4px;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
 }
@@ -782,7 +896,7 @@ input[type=radio].sheet-take-hiatus:checked ~ div.sheet-take-hiatus {
     display: flex;
     /* justify-content: space-around; */
     /* width: 500px; */
-    font-family: Verdana, Arial, sans-serif;
+    font-family: 'Crimson Text', Arial, sans-serif;
     font-size: 1em;
     font-weight: bold;
 }
@@ -965,7 +1079,7 @@ span.sheet-preview-roll {
     display: flex;
     /* justify-content: space-around; */
     /* width: 500px; */
-    font-family: Verdana, Arial, sans-serif;
+    font-family: 'Crimson Text', Arial, sans-serif;
     font-size: 1em;
     font-weight: normal;
 }
@@ -1166,7 +1280,7 @@ div.sheet-assets .repcontainer .repitem {
 .sheet-asset-type-dropdown {
     color: white;
     background: #414042;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     width: auto;
     font-size: 15px;
     font-weight: bold;
@@ -1243,7 +1357,7 @@ input.sheet-border-bottom {
     color: #ffffff;
     line-height: 0.9em;
     font-size: 0.9em;
-    font-family: Verdana, arial, sans-serif;
+    font-family: 'Crimson Text', arial, sans-serif;
     font-variant: small-caps;
     font-weight: bold;
     text-align: left;
@@ -1282,7 +1396,7 @@ input.sheet-border-bottom {
 
 p.sheet-bond-title {
     text-align: left;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     font-size: 16px;
     margin: 0 0 0px;
@@ -1335,7 +1449,7 @@ span.sheet-show-bond-info {
     border-radius: 4px;
     padding: 2px 4px;
     border: 1px solid;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
 }
 
@@ -1364,7 +1478,7 @@ span.sheet-show-bond-info {
     background: transparent;
     padding: 0;
     padding-left: 0.5em;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     color: #4C4D4F;
 }
@@ -1379,7 +1493,7 @@ span.sheet-show-bond-info {
 
 p.sheet-site-title {
     text-align: left;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     font-size: 16px;
     margin: 0 0 0px;
@@ -1431,7 +1545,7 @@ span.sheet-show-site-info {
     border-radius: 4px;
     padding: 2px 4px;
     border: 1px solid;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
 }
 
@@ -1497,7 +1611,7 @@ span.sheet-show-site-info {
 
 p.sheet-denizen-title {
     text-align: left;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     font-size: 12px;
     margin: 0 0 0px;
@@ -1554,7 +1668,7 @@ input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
 }
 
 .sheet-theme-header {
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     width: 100%;
     line-height: 24px;
@@ -1656,7 +1770,7 @@ input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
 }
 
 .sheet-vow-threat-label {
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Eczar, arial, sans-serif;
     font-weight: bold;
     font-size: 12px;
     line-height: 12px;
@@ -1747,7 +1861,7 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
 	border: 1px solid;
 	color: #4C4D4F;
 	font-size: 1em;
-    font-family: Verdana, Arial, sans-serif;
+    font-family: 'Crimson Text', Arial, sans-serif;
     margin: 0px;
 }
 
@@ -1772,7 +1886,7 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
     color: #ffffff;
     line-height: 0.9em;
     font-size: 0.9em;
-    font-family: Verdana, arial, sans-serif;
+    font-family: 'Crimson Text', arial, sans-serif;
     font-variant: small-caps;
     font-style: italic;
     font-weight: bold;
@@ -1787,7 +1901,7 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
     background-color: #b9b9b6;
     line-height: 0.9em;
     font-size: 0.9em;
-    font-family: Verdana, arial, sans-serif;
+    font-family: 'Crimson Text', arial, sans-serif;
     font-variant: small-caps;
     font-style: italic;
     font-weight: bold;
