cleaned up text

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -129,7 +129,7 @@ select::-ms-expand {
 }
 
 p {
-    font-family: 'Crimson Text', arial, sans-serif;
+    font-family: 'Crimson Text', Verdana, arial, sans-serif;
 }
 
 h1 {
@@ -896,7 +896,7 @@ input[type=radio].sheet-take-hiatus:checked ~ div.sheet-take-hiatus {
     display: flex;
     /* justify-content: space-around; */
     /* width: 500px; */
-    font-family: 'Crimson Text', Arial, sans-serif;
+    font-family: 'Crimson Text', Verdana, Arial, sans-serif;
     font-size: 1em;
     font-weight: bold;
 }
@@ -1079,7 +1079,7 @@ span.sheet-preview-roll {
     display: flex;
     /* justify-content: space-around; */
     /* width: 500px; */
-    font-family: 'Crimson Text', Arial, sans-serif;
+    font-family: 'Crimson Text', Verdana, Arial, sans-serif;
     font-size: 1em;
     font-weight: normal;
 }
@@ -1357,7 +1357,7 @@ input.sheet-border-bottom {
     color: #ffffff;
     line-height: 0.9em;
     font-size: 0.9em;
-    font-family: 'Crimson Text', arial, sans-serif;
+    font-family: 'Crimson Text', Verdana, arial, sans-serif;
     font-variant: small-caps;
     font-weight: bold;
     text-align: left;
@@ -1861,7 +1861,7 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
 	border: 1px solid;
 	color: #4C4D4F;
 	font-size: 1em;
-    font-family: 'Crimson Text', Arial, sans-serif;
+    font-family: Verdana, Arial, sans-serif;
     margin: 0px;
 }
 
@@ -1886,7 +1886,7 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
     color: #ffffff;
     line-height: 0.9em;
     font-size: 0.9em;
-    font-family: 'Crimson Text', arial, sans-serif;
+    font-family: Verdana, arial, sans-serif;
     font-variant: small-caps;
     font-style: italic;
     font-weight: bold;
@@ -1901,7 +1901,7 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
     background-color: #b9b9b6;
     line-height: 0.9em;
     font-size: 0.9em;
-    font-family: 'Crimson Text', arial, sans-serif;
+    font-family: Verdana, arial, sans-serif;
     font-variant: small-caps;
     font-style: italic;
     font-weight: bold;
