removed font calls

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -129,11 +129,11 @@ select::-ms-expand {
 }
 
 p {
-    font-family: 'Crimson Text', Verdana, arial, sans-serif;
+    font-family: Verdana, arial, sans-serif;
 }
 
 h1 {
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     width: 100%;
     font-size: 28px;
@@ -144,7 +144,7 @@ h1 {
 }
 
 h2 {
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     width: 100%;
     font-size: 18px;
@@ -155,7 +155,7 @@ h2 {
 }
 
 h3 {
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     width: 100%;
     line-height: 24px;
@@ -203,7 +203,7 @@ h3.sheet-site-divide-notes::after, h3.sheet-site-divide-notes::before {
 }
 
 h4 {
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     width: 100%;
     font-size: 16px;
@@ -218,7 +218,7 @@ h4.sheet-tab-title {
 }
 
 h5 {
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 12px;
     text-align: left;
@@ -493,7 +493,7 @@ span.sheet-momentum-burn {
     text-align: center;
     border: 1px solid #ccc;
     padding: 0.2em 1.3em 0.2em 1.3em;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
     margin-left: -79px;
@@ -595,13 +595,13 @@ span.sheet-momentum-burn {
 
 .sheet-pc-name {
     width: 100%;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
 }
 .sheet-debil-desc {
     width: 100%;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
 }
@@ -610,7 +610,7 @@ span.sheet-momentum-burn {
 .sheet-page-label, 
 .sheet-vow-clear-label {
     width: 100%;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
 }
@@ -704,7 +704,7 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 }
 
 .sheet-momentum-input {
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     width: 40px;
     font-size: 13px;
@@ -717,7 +717,7 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 }
 
 .sheet-stats-input {
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     width: 60px;
     line-height: 40px;
@@ -793,7 +793,7 @@ span.sheet-showhide {
     margin-right: 11px;
     border-radius: 4px;
     padding: 2px 4px;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
 }
@@ -896,7 +896,7 @@ input[type=radio].sheet-take-hiatus:checked ~ div.sheet-take-hiatus {
     display: flex;
     /* justify-content: space-around; */
     /* width: 500px; */
-    font-family: 'Crimson Text', Verdana, Arial, sans-serif;
+    font-family: Verdana, Arial, sans-serif;
     font-size: 1em;
     font-weight: bold;
 }
@@ -1079,7 +1079,7 @@ span.sheet-preview-roll {
     display: flex;
     /* justify-content: space-around; */
     /* width: 500px; */
-    font-family: 'Crimson Text', Verdana, Arial, sans-serif;
+    font-family: Verdana, Arial, sans-serif;
     font-size: 1em;
     font-weight: normal;
 }
@@ -1280,7 +1280,7 @@ div.sheet-assets .repcontainer .repitem {
 .sheet-asset-type-dropdown {
     color: white;
     background: #414042;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     width: auto;
     font-size: 15px;
     font-weight: bold;
@@ -1357,7 +1357,7 @@ input.sheet-border-bottom {
     color: #ffffff;
     line-height: 0.9em;
     font-size: 0.9em;
-    font-family: 'Crimson Text', Verdana, arial, sans-serif;
+    font-family: Verdana, arial, sans-serif;
     font-variant: small-caps;
     font-weight: bold;
     text-align: left;
@@ -1396,7 +1396,7 @@ input.sheet-border-bottom {
 
 p.sheet-bond-title {
     text-align: left;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 16px;
     margin: 0 0 0px;
@@ -1449,7 +1449,7 @@ span.sheet-show-bond-info {
     border-radius: 4px;
     padding: 2px 4px;
     border: 1px solid;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
 }
 
@@ -1478,7 +1478,7 @@ span.sheet-show-bond-info {
     background: transparent;
     padding: 0;
     padding-left: 0.5em;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     color: #4C4D4F;
 }
@@ -1493,7 +1493,7 @@ span.sheet-show-bond-info {
 
 p.sheet-site-title {
     text-align: left;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 16px;
     margin: 0 0 0px;
@@ -1545,7 +1545,7 @@ span.sheet-show-site-info {
     border-radius: 4px;
     padding: 2px 4px;
     border: 1px solid;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
 }
 
@@ -1611,7 +1611,7 @@ span.sheet-show-site-info {
 
 p.sheet-denizen-title {
     text-align: left;
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 12px;
     margin: 0 0 0px;
@@ -1668,7 +1668,7 @@ input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
 }
 
 .sheet-theme-header {
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     width: 100%;
     line-height: 24px;
@@ -1770,7 +1770,7 @@ input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
 }
 
 .sheet-vow-threat-label {
-    font-family: Eczar, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 12px;
     line-height: 12px;
