updated example and fonts

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -10,6 +10,7 @@ select {
     text-indent: 1px;
     text-overflow: '';
 }
+
 select::-ms-expand {
     display: none;
 }
@@ -232,84 +233,75 @@ input.sheet-clear-vow {
 }
 
 input.sheet-page1 {
-    width: 140px;
+    width: 116px;
 }
 
 span.sheet-page-label-1 {
-    margin-left: -144px;
-    width: 140px;
+    margin-left: -119px;
 }
 
 input.sheet-page2 {
-    width: 75px;
+    width: 69px;
 }
 
 span.sheet-page-label-2 {
-    width: 75px;
-    margin-left: -78px;
+    margin-left: -73px;
 }
 
 input.sheet-page3 {
-    width: 60px;
+    width: 54px;
 }
 
 span.sheet-page-label-3 {
-    margin-left: -64px;
-    width: 60px;
+    margin-left: -58px;
 }
 
 input.sheet-page4 {
-    width: 72px;
+    width: 59px;
 }
 
 span.sheet-page-label-4 {
-    margin-left: -77px;
-    width: 60px;
+    margin-left: -63px;
 }
 
 input.sheet-page5 {
-    width: 58px;
+    width: 51px;
 }
 
 span.sheet-page-label-5 {
-    margin-left: -61px;
-    width: 60px;
+    margin-left: -55px;
 }
 
 input.sheet-page6 {
-    width: 56px;
+    width: 52px;
 }
 
 span.sheet-page-label-6 {
-    margin-left: -60px;
-    width: 56px;
+    margin-left: -56px;
 }
 
 input.sheet-page7 {
-    width: 48px;
+    width: 42px;
 }
 
 span.sheet-page-label-7 {
-    margin-left: -51px;
-    width: 56px;
+    margin-left: -45px;
 }
 
 input.sheet-page8 {
-    width: 144px;
+    width: 138px;
 }
 
 span.sheet-page-label-8 {
-    margin-left: -148px;
-    width: 56px;
+    margin-left: -142px;
 }
 
 input.sheet-page9 {
-    width: 144px;
+    width: 101px;
 }
 
 span.sheet-page-label-9 {
-    margin-left: -148px;
-    width: 56px;
+    margin-left: -104px;
 }
 
 .sheet-vertleft {
@@ -358,31 +350,38 @@ span.sheet-page-label-9 {
     align-items: center;
 }
 
-input[type=checkbox].sheet-momentum-burn:hover ~ span.sheet-momentum-burn {
-    border-radius: 4px;
-    background-color: #ccc;
-    color: #4C4D4F;
-}
-
 input[type=checkbox].sheet-momentum-burn {
     width: 80px;
-    height: 1.3em;
+    height: 20px;
     opacity: 0;
+    border: 0;
+    vertical-align: top;
+}
+
+div.sheet-momentum-burn-back {
+    margin-top: -20px;
+    height: 20px;
 }
 
 div.sheet-momentum-burn {
-    margin-bottom: 0.5em;
+    margin-bottom: 0.2em;
+    border: 2px solid #4C4D4F;
 }
 
 span.sheet-momentum-burn {
-    border-radius: 4px;
+    /* border-radius: 4px; */
     text-align: center;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     padding: 0.2em 1.3em 0.2em 1.3em;
     font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
-    margin-left: -79px;
+    margin-left: -77px;
+    text-align: center;
+}
+
+input[type=checkbox].sheet-momentum-burn:hover ~ div.sheet-momentum-burn-back {
+    background-color: #ccc;
 }
 
 .sheet-bonds {
@@ -441,6 +440,64 @@ span.sheet-momentum-burn {
     border: 2px solid #4C4D4F;
     margin-bottom: 2px;
 }
+
+.sheet-track-box-input {
+    width: 80px;
+    height: 45px !important;
+    opacity: 0;
+    vertical-align: top;
+}
+
+.sheet-track-box-back {
+    width: 80px;
+    height: 45px;
+    margin-top: -45px;
+}
+
+.sheet-resources-box-input {
+    width: 80px;
+    height: 40px !important;
+    opacity: 0;
+    vertical-align: top;
+}
+
+.sheet-resources-box-back {
+    width: 80px;
+    height: 40px;
+    margin-top: -40px;
+}
+
+.sheet-track-box-input:hover ~ .sheet-track-box-back,
+.sheet-resources-box-input:hover ~ .sheet-resources-box-back {
+    background: #ccc;
+}
+
+.sheet-track-box-input:checked ~ .sheet-track-box-back,
+.sheet-resources-box-input:checked ~ .sheet-resources-box-back {
+    background: #4C4D4F;
+    color: white;
+}
+
+.sheet-track-box-value {
+    font-family: arial, sans-serif;
+    padding: 0px;
+    font-weight: bold;
+    height: 35px;
+    padding-top: 10px;
+    font-size: 18px;
+    color: inherit;
+}
+
+.sheet-resources-box-value {
+    font-family: arial, sans-serif;
+    padding: 0px;
+    font-weight: bold;
+    height: 35px;
+    padding-top: 10px;
+    font-size: 18px;
+    color: inherit;
+}
+
 .sheet-momentum-input-box {
     width: 80px;
     height: 60px;
@@ -1660,7 +1717,7 @@ input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
     font-weight: bold;
     font-size: 12px;
     line-height: 12px;
-    margin-left: 0.85em;
+    margin-left: 8px;
 }
 
 .sheet-threat-fill {
