--- a/Connected_stories/Connected_stories.css
+++ b/Connected_stories/Connected_stories.css
@@ -63,23 +63,27 @@
 .sheet-detailbox {position:relative; float:left; overflow:hidden; width:467px; height:305px; padding:35px 22px; margin-left:15px; background:url('https://i.imgur.com/DuZVRVr.png') no-repeat 0 0; box-sizing:border-box;}
 .sheet-detailbox p {font-weight:800; margin:0 0 10px;}
 .sheet-detailbox textarea {display:block; width:100%; height:208px; box-sizing:border-box; border:none; resize:none; background:transparent; line-height:1.5; font-size:12px;}
-.sheet-detailbox table {width:100%;}
-.sheet-detailbox table td {padding:2px;}
-.sheet-detailbox table input,
-.sheet-detailbox table button {display:block; width:100%;}
-.sheet-detailbox table button {width:25px; height:25px; cursor:pointer; margin:0 !important; box-sizing:border-box;}
 .sheet-detailbox .sheet-skill {width:160px; float:left;}
 .sheet-detailbox .sheet-wepon {width:228px; float:right;}
-.sheet-detailbox .sheet-wepon thead th {font-size:12px; color:rgba(0,0,0,.7); text-align:left; padding:0; font-weight:400;}
+.sheet-detailbox .sheet-wepon .sheet-list dl {overflow:hidden; position:relative; margin:0 0 5px 0; padding:0 29px 0 124px; font-size:12px; color:rgba(0,0,0,.7); text-align:left; font-weight:400;}
+.sheet-detailbox .sheet-wepon .sheet-list dt {margin:0; padding:0; display:block; position:absolute; width:120px; top:0; left:0;}
+.sheet-detailbox .sheet-wepon .sheet-list dd {display:block; position:relative; margin:0; padding:0; box-sizing:border-box;}
+.sheet-detailbox .sheet-wepon .sheet-list dd + dd {position:absolute; display:block; width:25px; right:0; top:0; }
+.sheet-detailbox .sheet-wepon .sheet-list input,
+.sheet-detailbox .sheet-wepon .sheet-list button {display:block; width:100%;}
+.sheet-detailbox .sheet-wepon .sheet-list button {width:25px; height:25px; cursor:pointer; margin:0 !important; box-sizing:border-box;}
 
 .sheet-relationbox {position:relative; float:right; width:317px; height:310px; padding:50px 20px 0; margin-right:15px; background:url('https://i.imgur.com/8Hvty4q.png') no-repeat 0 15px; box-sizing:border-box;}
 .sheet-relationbox p {display:block; position:absolute; top:13px; left:50%; width:130px; margin-left:-65px; font-size:14px; text-align:center;}
-.sheet-relationbox table {width:100%;}
-.sheet-relationbox thead th {font-size:12px; color:rgba(0,0,0,.7); text-align:left; padding:0; font-weight:400;}
-.sheet-relationbox table td {padding:2px;}
-.sheet-relationbox table input,
-.sheet-relationbox table button {display:block; width:100%;}
-.sheet-relationbox table button {width:25px; height:25px; cursor:pointer;}
+
+.sheet-relationbox dl {overflow:hidden; position:relative; margin:0 0 5px 0; padding:0 50px 0 124px; font-size:12px; color:rgba(0,0,0,.7); text-align:left; font-weight:400;}
+.sheet-relationbox dt {margin:0; padding:0; display:block; position:absolute; width:120px; top:0; left:0;}
+.sheet-relationbox dd {display:block; position:relative; margin:0; padding:0; box-sizing:border-box;}
+.sheet-relationbox dd + dd {position:absolute; display:block; width:45px; right:0; top:0; }
+.sheet-relationbox input,
+.sheet-relationbox button {display:block; width:100%;}
+.sheet-relationbox button {width:25px; height:25px; cursor:pointer; margin:0 !important; box-sizing:border-box;}
+
 
 .sheet-inventory {margin:0 15px 30px; padding-top:0; clear:both;}
 .sheet-inventory p {font-weight:600; margin:20px 0 10px;}
