--- a/Omegaverse_Trpg/Omegaverse_trpg.css
+++ b/Omegaverse_Trpg/Omegaverse_trpg.css
@@ -80,19 +80,23 @@
 .sheet-skill-table .sheet-table-title {background:#64605d; font-weight:800; color:#fff; font-size:14px; text-align:center; padding:7px; margin:0 -4px 8px;}
 .sheet-skill-table input[type="text"] {padding:0; max-width:30px;}
 .sheet-skill-table.sheet-ty3 input[type="text"] {padding:0 5px; max-width:100%;}
-.sheet-skill-table table {width:100%; table-layout:fixed; border-collapse:collapse;}
-.sheet-skill-table table th { font-weight:800;}
-.sheet-skill-table table td {width:25px; padding:2px;}
-.sheet-skill-table.sheet-ty1 table button,
-.sheet-skill-table.sheet-ty2 table button {display:block; width:100%; text-align:left; border:0; height:21px; padding:0 !important; vertical-align:middle; background:none; letter-spacing:-0.02em; padding-left:5px; font-size:12px !important; font-weight:600; margin:0; border-radius:0; text-shadow:none; box-shadow:none;}
 
-.sheet-skill-table.sheet-ty1 table button:before,
-.sheet-skill-table.sheet-ty2 table button:before {display:none !important;}
+.sheet-skill-table dl {display:block; position:relative; overflow:hidden; padding-left:70px; margin:0;}
+.sheet-skill-table dl + dl {margin-bottom:2px;}
+.sheet-skill-table dt {display:block; position:absolute; top:0; left:0;}
+.sheet-skill-table dt {display:block; position:absolute; top:0; left:0; width:70px; padding:2px; font-weight:800; margin:0;}
+.sheet-skill-table dd {display:block; float:left; width:33.33%; padding:2px; box-sizing:border-box; margin:0;}
 
-.sheet-skill-table.sheet-ty3 table th {width:25px;}
-.sheet-skill-table.sheet-ty3 table button {width:21px; height:21px; padding:0 !important; margin:0 !important;}
-.sheet-skill-table.sheet-ty3 table td {width:auto;}
-.sheet-skill-table.sheet-ty3 table td + td {width:30px;}
+.sheet-skill-table.sheet-ty1 dt button,
+.sheet-skill-table.sheet-ty2 dt button {display:block; width:100%; text-align:left; border:0; height:21px; padding:0 !important; vertical-align:middle; background:none; letter-spacing:-0.02em; padding-left:5px; font-size:12px !important; font-weight:600; margin:0; border-radius:0; text-shadow:none; box-shadow:none;}
+.sheet-skill-table.sheet-ty1 dt button:before,
+.sheet-skill-table.sheet-ty2 dt button:before {display:none !important;}
+
+.sheet-skill-table.sheet-ty3 dl {padding-left:25px; padding-right:34px;}
+.sheet-skill-table.sheet-ty3 dt {width:25px;}
+.sheet-skill-table.sheet-ty3 dt button {width:21px; height:21px; padding:0 !important; margin:0 !important;}
+.sheet-skill-table.sheet-ty3 dd {width:100%;}
+.sheet-skill-table.sheet-ty3 dd + dd {width:34px; position:absolute; top:0; right:0;}
 
 .sheet-partner-score {max-width:200px; float:right;}
 
