--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -540,6 +540,10 @@ input[type=checkbox].sheet-momentum-burn:hover ~ div.sheet-momentum-burn-back {
     font-family: arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
+    border: 2px solid #4C4D4F;
+    background: #E6E7E8;
+    color: #4C4D4F;
+    border-radius: 0;
 }
 .sheet-debil-desc {
     width: 100%;
