--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -469,12 +469,17 @@ input.sheet-tab0 + span {
     display: inline-block;
     padding-bottom: 5px;
     width: 100%;
-    height: 141px;
+    height: 100%;
 }
 
 /* add spacing to skill name labels and values */
 .sheet-melee-notebox .sheet-col-wide b {
     margin: 0 5px 0 5px;
+}
+
+.sheet-melee-notebox .sheet-row,
+.sheet-melee-notebox .sheet-row .sheet-cell {
+    height: 100%;
 }
 
 .sheet-ranged-notebox .sheet-col-wide b {
@@ -485,7 +490,7 @@ input.sheet-tab0 + span {
     display: inline-block;
     padding-bottom: 5px;
     width: 100%;
-    height: 163px;
+    height: 100%;
 }
 
 .sheet-toggle ~ .sheet-melee-notebox,
@@ -502,6 +507,11 @@ input.sheet-tab0 + span {
 .sheet-melee-notebox .sheet-popup,
 .sheet-ranged-notebox .sheet-popup {
     font-weight: bold;
+}
+
+.sheet-ranged-notebox .sheet-row,
+.sheet-ranged-notebox .sheet-row .sheet-cell {
+    height: 100%;
 }
 
 /*
@@ -597,7 +607,7 @@ input.sheet-tab0 + span {
 
 /*  NOTEBOX */
 .sheet-row-details.sheet-notebox {
-    height: 318px;
+    height: 100%;
     padding: 0 4px;
 }
 
@@ -1368,12 +1378,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
     z-index: -1;
 }
 
-.sheet-traits .sheet-row-details.sheet-notebox {
-    height: 110px;
-}
-
 .sheet-traits .sheet-row-details.sheet-notebox .sheet-col-notebox {
-    height: 110px;
+    height: 100%;
     width: 100%;
 }
 
@@ -1785,6 +1791,10 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
     padding: 1px;
 }
 
+.sheet-techniques-revised .sheet-cell.sheet-col-wide b {
+    margin: 0 5px 0 5px;
+}
+
 .sheet-techniques-revised { width: calc(100% - 0.4em); }
 .sheet-techniques-revised .sheet-col0 { width: calc((100% - 380px) * 0.55); }
 .sheet-techniques-revised .sheet-col0 input { text-align:left; }
@@ -2005,7 +2015,7 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-ranged-notebox .sheet-col-row-id {
-    width: 45px;
+    width: 48px;
 }
 
 .sheet-ranged-notebox .sheet-col-input {
