--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1182,7 +1182,7 @@ input.sheet-box-stats-notes-point-summary[value="3"] + div {
 }
 
 .sheet-options.sheet-medium-height {
-    height: 300px;
+    height: 360px;
 }
 
 .sheet-options.sheet-tall-height {
@@ -1753,6 +1753,16 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 /* -- techniques -- */
+
+/* show or hide */
+input.sheet-box-techniques-old[value="1"] + div.sheet-techniques {
+    display: block;
+}
+
+input.sheet-box-techniques-old[value="0"] + div.sheet-techniques {
+    display: none;
+}
+
 .sheet-techniques { width: calc(100% - 0.4em); }
 .sheet-techniques .sheet-col0 { width: calc((100% - 260px) * 0.55); }
 .sheet-techniques .sheet-col0 input { text-align:left; }
@@ -1786,6 +1796,15 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 
 
 /* -- techniques revised -- */
+
+/* show or hide */
+input.sheet-box-techniques-new[value="1"] + div.sheet-techniques {
+    display: block;
+}
+
+input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
+    display: none;
+}
 
 .sheet-techniques-revised .sheet-cell {
     padding: 1px;
