--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
@@ -45,6 +45,7 @@
   border-radius: 5px;
   padding: 1px;
   float: left;
+  height: 80px;
 }
 .sheet-wrap-box-transparent {
   border: 1px solid black;
@@ -413,10 +414,12 @@ button[type=roll] span {
 }
 .sheet-banner-l-wrapper img {
   float: left;
+  height: 80px;
   border-radius: 5px;
 }
 .sheet-banner-r-wrapper img {
-  display: block;
+  float: left;
+  height: 80px;
 }
 
 /* === SKILLS === */
